[gd_scene load_steps=2 format=3 uid="uid://b5d01sbijtn2d"]

[ext_resource type="Script" path="res://scenes/_shared/ui/ResultsScreen.gd" id="1_iomis"]

[node name="ResultsScreenBuffet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iomis")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = -4

[node name="ScoreLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
text = "Score = 42"
horizontal_alignment = 2
vertical_alignment = 2

[node name="LivesBonusLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
text = "Bono = 9 x 1000 = 9000"
horizontal_alignment = 2
vertical_alignment = 2

[node name="TotalScoreLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
text = "Total = 9042"
horizontal_alignment = 2
vertical_alignment = 2
